--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">MyFileProviderExample</string>
     <string name="action_send_email_opt1">Send Email Opt 1</string>
     <string name="action_send_email_opt2">Send Email Opt 2</string>
+    <string name="select_image">Select Image</string>
+    <string name="take_picture">Take Picture</string>
 </resources>
